doing some major changes

--- a/index.html
+++ b/index.html
@@ -8,17 +8,206 @@
     <link rel="stylesheet" href="HTML + CSS + JS/Basic Form/Basic_form.html">
 </head>
 
+<!-- A main heading and descriptiona about all work with logo -->
+<!-- Heading of each work -->
+
 <div id="container1" style="height: 500px;"></div>
-<!-- <div id="includedContent2" style=" height: 1200px;"></div> -->
+<hr>
+<div id="container2" style="height: 220px;"></div>
+<hr>
+<div id="container3" style="height: 500px;"></div>
+<hr>
+<div id="container4" style="height: 500px;"></div>
+<hr>
+<div id="container5" style="height: 500px;"></div>
+<hr>
+<div id="container6" style="height: 500px;"></div>
+<hr>
+<div id="container7" style="height: 500px;"></div>
+<hr>
+<div id="container8" style="height: 500px;"></div>
+<hr>
+<div id="container9" style="height: 500px;"></div>
+<hr>
+<div id="container10" style="height: 500px;"></div>
+<hr>
+<div id="container11" style="height: 500px;"></div>
+<hr>
+<div id="container12" style="height: 700px;"></div>
+<hr>
+<div id="container13" style="height: 500px;"></div>
+<hr>
+<div id="container14" style="height: 500px;"></div>
+<hr>
+<div id="container15" style="height: 540px;"></div>
+<hr>
+<div id="container16" style="height: 500px;"></div>
+<hr>
+<div id="container17" style="height: 500px;"></div>
+<hr>
+<div id="container18" style="height: 500px;"></div>
+<hr>
+<div id="container19" style="height: 500px;"></div>
+<hr>
+<div id="container20" style="height: 500px;"></div>
+<hr>
+<div id="container21" style="height: 500px;"></div>
+<hr>
+<div id="container22" style="height: 500px;"></div>
+<hr>
+<div id="container23" style="height: 500px;"></div>
+<hr>
+<div id="container24" style="height: 500px;"></div>
+<hr>
+<div id="container25" style="height: 500px;"></div>
+<hr>
+<div id="container26" style="height: 500px;"></div>
+<hr>
+<div id="container27" style="height: 500px;"></div>
+<hr>
+<div id="container28" style="height: 500px;"></div>
+<hr>
+<div id="container29" style="height: 500px;"></div>
+<hr>
+<div id="container30" style="height: 500px;"></div>
+<hr>
+<div id="container31" style="height: 500px;"></div>
+<hr>
+<div id="container32" style="height: 500px;"></div>
+<hr>
+<div id="container33" style="height: 500px;"></div>
+<hr>
+<div id="container34" style="height: 500px;"></div>
+<hr>
+<div id="container35" style="height: 500px;"></div>
+<hr>
+<div id="container36" style="height: 500px;"></div>
+<hr>
+<div id="container37" style="height: 500px;"></div>
+<hr>
+<div id="container38" style="height: 500px;"></div>
+<hr>
+<div id="container39" style="height: 500px;"></div>
+<hr>
+<div id="container40" style="height: 500px;"></div>
+<hr>
+<div id="container41" style="height: 500px;"></div>
+<hr>
+<div id="container42" style="height: 500px;"></div>
+<hr>
+<div id="container43" style="height: 500px;"></div>
+<hr>
+<div id="container44" style="height: 500px;"></div>
+<hr>
+<div id="container45" style="height: 500px;"></div>
+<hr>
+<div id="container46" style="height: 500px;"></div>
+<hr>
+<div id="container47" style="height: 500px;"></div>
+<hr>
+<div id="container48" style="height: 500px;"></div>
+<hr>
+<div id="container49" style="height: 500px;"></div>
+<hr>
+<div id="container50" style="height: 500px;"></div>
+<hr>
+<div id="container51" style="height: 500px;"></div>
+<hr>
+<div id="container52" style="height: 500px;"></div>
+<hr>
+<div id="container53" style="height: 500px;"></div>
+<hr>
+<div id="container54" style="height: 500px;"></div>
+<hr>
+<div id="container55" style="height: 500px;"></div>
+<hr>
+<div id="container56" style="height: 500px;"></div>
+<hr>
+<div id="container57" style="height: 500px;"></div>
+<hr>
+<div id="container58" style="height: 500px;"></div>
+<hr>
+<div id="container59" style="height: 500px;"></div>
+<hr>
+<div id="container60" style="height: 500px;"></div>
+<hr>
+<div id="container61" style="height: 500px;"></div>
+<!-- <hr> -->
+<!-- <div id="container62" style="height: 500px;"></div> -->
+
+
+
+
 
 <script>
 document.addEventListener('DOMContentLoaded', function () {
     // Define an array of filenames
     var filenames = [
         'HTML/first.html',
+        'none/vertical_table.html',
+        'none/calculator.html',
+        'forms/monthly_form.html',
+        'Dropdown/drop.html',
+        'AnimOnScroll/index.html',
+        'Assignment_box/box_model.html',
+        'Basic_Form/Basic_form.html',
+        'BS form/ComplainForm.html',
+        'BS_slider/slider.html',
+        'BS_table/table.html',
+        'Checkout/from_assign.html',
+        'Circle_Animation/animation.html',
+        'Codewar_Landing_Page/index.html',
+        'Collapse/collapse_aasignment.html',
+        'contact/contact.html',
+        'form task/task_01(login_form).html',
+        'form task/task_02(wordcount).html',
+        'forms/form.html',
+        'Gallery/animate_gallery.html',
+        'Input_Marksheet/input_marksheet.html',
+        'Interconnection + gallery/Home.html',
+        'jquery_scroll_webpage/scroll_jq.html',
+        'Jquery_task/basicfilter.html',
+        'Jquery_task/onevent.html',
+        'Jquery_task/task_1.html',
+        'Jquery_task/task_2.html',
+        'Jquery_task/task_3.html',
+        'js_calc/Simple Addition.html',
+        'Landing Page 1/purple.html',
+        'Landing Page 2/chimper.html',
+        'Landing Page 3/AXIT.html',
+        'Landing Page 4/tem.html',
+        'Landing Page 5/task.html',
+        'Landing Page 6/ecom.html',
+        'Landing Page 7/gridline.html',
+        'lightbox/lightbox.html',
+        'login/js_gates.html',
+        'login_frontend/login_form.html',
+        'Marksheet_JS(onkeyup)/Marksheet.html',
+        'mediaquery/media.html',
+        'Regex Login/simple_regex_login.html',
+        'Registration Form/Registration_Form (only_Html).html',
+        'scroll/scroll_jq.html',
+        'searching_task(onchange)/search.html',
+        'Select_Menu/index.html',
+        'Simple Scroll/index.html',
+        'simple_css_layout/layout 1.html',
+        'simple_css_layout/layout 2.html',
+        'Slick Slider/Slider_Assignment.html',
+        'Slider/classwork.html',
+        'Task Event/chatbox.html',
+        'Task Event/event01.html',
+        'Task Event/mcq_s.html',
+        'Task Event/mcqs_assignment.html',
+        'tasks/index.html',
+        'timer/time.html',
+        'Transition Assignment/assign.html',
+        'zoom/zoom.html'
+
+
         // Add more filenames as needed
     ];
 
+    console.log(filenames.length);
     // Loop through and load each HTML file
     for (var i = 0; i < filenames.length; i++) {
         // Select the container with the corresponding ID
@@ -28,7 +217,7 @@ document.addEventListener('DOMContentLoaded', function () {
         var objectElement = document.createElement('object');
 
         // Set the 'data', 'width', and 'height' attributes using the filename from the array
-        objectElement.setAttribute('data', filenames[i]);
+        objectElement.setAttribute('data', 'work/' + filenames[i]);
         objectElement.setAttribute('width', '100%');
         objectElement.setAttribute('height', '100%');
 
