--- a/work/none/vertical_table.html
+++ b/work/none/vertical_table.html
@@ -28,9 +28,9 @@
         </tr>
         <tr>
             <th>Images</th>
-            <td> <img src="1.jpg" alt="" height="100" width="100"> </td>
-            <td><img src="2.jpg" alt="" height="100" width="100"></td>
-            <td><img src="3.jpg" alt="" height="100" width="100"></td>
+            <td> <img src="../img/car1.jpg" alt="car1.jpg" height="100" width="100"> </td>
+            <td><img src="../img/car2.jpg" alt="car2.jpg" height="100" width="100"></td>
+            <td><img src="../img/car3.jpg" alt="car3.jpg" height="100" width="100"></td>
         </tr>
         <tr></tr>
         <tr></tr>
