--- a/work/jquery_scroll_webpage/scroll_jq.html
+++ b/work/jquery_scroll_webpage/scroll_jq.html
@@ -10,10 +10,10 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
         integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous">
-    </script>
+        </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous">
-    </script>
+        </script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
@@ -21,7 +21,6 @@
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/carousel/">
     <!-- Bootstrap core CSS -->
-    <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="carousel.css">
     <style>
         .bd-placeholder-img {
@@ -103,7 +102,7 @@
 
                 <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
                     aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
-                    <img src="1.jpg" width="100%" height="100%" alt="">
+                    <img src="../img/laptop.jpg" width="100%" height="100%" alt="laptop.jpg">
                 </svg>
 
                 <div class="container">
@@ -116,8 +115,8 @@
             </div>
             <div class="carousel-item">
                 <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
-                    aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"> <img src="2.jpg"
-                        width="100%" height="100%" alt=""></svg>
+                    aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"> <img src="../img/mac_set.jpg"
+                        width="100%" height="100%" alt="mac_set.jpg"></svg>
 
                 <div class="container">
                     <div class="carousel-caption">
@@ -129,8 +128,8 @@
             </div>
             <div class="carousel-item">
                 <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
-                    aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"> <img src="3.jpg"
-                        width="100%" height="100%" alt=""></svg>
+                    aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"> <img src="../img/mac1.jpg"
+                        width="100%" height="100%" alt="mac1.jpg"></svg>
 
                 <div class="container">
                     <div class="carousel-caption text-end">
@@ -150,7 +149,7 @@
             <span class="visually-hidden">Next</span>
         </button>
     </div>
-    
+
     <h1 id="myhead" class="animate__animated animate__bounceInDown text-center p-3">An animated element</h1>
 
     <p class="container pt-2 toc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas illo exercitationem
@@ -204,7 +203,7 @@
         <div class="animate__animated animate__bounceInDown row ps-5">
             <div class="col-4">
                 <div class="card" style="width: 18rem;">
-                    <img src="1.jpg" class="card-img-top" style="height: 200px;">
+                    <img src="../img/mac1.jpg" class="card-img-top" style="height: 200px;">
                     <div class="card-body">
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the
@@ -214,7 +213,7 @@
             </div>
             <div class="col-4">
                 <div class="card " style="width: 18rem;">
-                    <img src="2.jpg" class="card-img-top" style="height: 200px;">
+                    <img src="../img/mac_set.jpg" class="card-img-top" style="height: 200px;">
                     <div class="card-body">
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
@@ -223,7 +222,7 @@
             </div>
             <div class="col-4">
                 <div class="card " style="width: 18rem;">
-                    <img src="3.jpg" class="card-img-top" style="height: 200px;">
+                    <img src="../img/mac1.jpg" class="card-img-top" style="height: 200px;">
                     <div class="card-body">
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
