--- a/index.html
+++ b/index.html
@@ -45,35 +45,35 @@
 <hr>
 <div id="container16" style="height: 500px;"></div>
 <hr>
-<div id="container17" style="height: 500px;"></div>
+<div id="container17" style="height: 3040px;"></div>
 <hr>
-<div id="container18" style="height: 500px;"></div>
+<div id="container18" style="height: 1020px;"></div>
 <hr>
 <div id="container19" style="height: 500px;"></div>
 <hr>
-<div id="container20" style="height: 500px;"></div>
+<div id="container20" style="height: 590px;"></div>
 <hr>
-<div id="container21" style="height: 500px;"></div>
+<div id="container21" style="height: 250px;"></div>
 <hr>
 <div id="container22" style="height: 500px;"></div>
 <hr>
-<div id="container23" style="height: 500px;"></div>
+<div id="container23" style="height: 390px;"></div>
 <hr>
-<div id="container24" style="height: 500px;"></div>
+<div id="container24" style="height: 600px;"></div>
 <hr>
-<div id="container25" style="height: 500px;"></div>
+<div id="container25" style="height: 540px;"></div>
 <hr>
 <div id="container26" style="height: 500px;"></div>
 <hr>
 <div id="container27" style="height: 500px;"></div>
 <hr>
-<div id="container28" style="height: 500px;"></div>
+<div id="container28" style="height: 760px;"></div>
 <hr>
 <div id="container29" style="height: 500px;"></div>
 <hr>
-<div id="container30" style="height: 500px;"></div>
+<div id="container30" style="height: 200px;"></div>
 <hr>
-<div id="container31" style="height: 500px;"></div>
+<div id="container31" style="height: 390px;"></div>
 <hr>
 <div id="container32" style="height: 500px;"></div>
 <hr>
@@ -87,7 +87,7 @@
 <hr>
 <div id="container37" style="height: 500px;"></div>
 <hr>
-<div id="container38" style="height: 500px;"></div>
+<div id="container38" style="height: 800px;"></div>
 <hr>
 <div id="container39" style="height: 500px;"></div>
 <hr>
@@ -95,45 +95,40 @@
 <hr>
 <div id="container41" style="height: 500px;"></div>
 <hr>
-<div id="container42" style="height: 500px;"></div>
+<div id="container42" style="height: 200px;"></div>
 <hr>
-<div id="container43" style="height: 500px;"></div>
+<div id="container43" style="height: 1550px;"></div>
 <hr>
 <div id="container44" style="height: 500px;"></div>
 <hr>
-<div id="container45" style="height: 500px;"></div>
+<div id="container45" style="height: 520px;"></div>
 <hr>
 <div id="container46" style="height: 500px;"></div>
 <hr>
-<div id="container47" style="height: 500px;"></div>
+<div id="container47" style="height: 1895px;"></div>
 <hr>
 <div id="container48" style="height: 500px;"></div>
 <hr>
-<div id="container49" style="height: 500px;"></div>
+<div id="container49" style="height: 220px;"></div>
 <hr>
 <div id="container50" style="height: 500px;"></div>
 <hr>
-<div id="container51" style="height: 500px;"></div>
+<div id="container51" style="height: 900px;"></div>
 <hr>
-<div id="container52" style="height: 500px;"></div>
+<div id="container52" style="height: 3480px;"></div>
 <hr>
-<div id="container53" style="height: 500px;"></div>
+<div id="container53" style="height: 1250px;"></div>
 <hr>
-<div id="container54" style="height: 500px;"></div>
+<div id="container54" style="height: 1585px;"></div>
 <hr>
-<div id="container55" style="height: 500px;"></div>
+<div id="container55" style="height: 1380px;"></div>
 <hr>
-<div id="container56" style="height: 500px;"></div>
+<div id="container56" style="height: 1900px;"></div>
 <hr>
-<div id="container57" style="height: 500px;"></div>
-<hr>
-<div id="container58" style="height: 500px;"></div>
-<hr>
-<div id="container59" style="height: 500px;"></div>
-<hr>
-<div id="container60" style="height: 500px;"></div>
-<hr>
-<div id="container61" style="height: 500px;"></div>
+<div id="container57" style="height: 3500px;"></div>
+<footer style="text-align: center;">
+No Rights Reserved &copy;
+</footer>
 <!-- <hr> -->
 <!-- <div id="container62" style="height: 500px;"></div> -->
 
@@ -145,7 +140,6 @@
 document.addEventListener('DOMContentLoaded', function () {
     // Define an array of filenames
     var filenames = [
-        
         'HTML/first.html', // HTML Assignment
         'none/vertical_table.html',
         'none/calculator.html',
@@ -176,8 +170,7 @@ document.addEventListener('DOMContentLoaded', function () {
         'Registration Form/Registration_Form (only_Html).html',        
         'Input_Marksheet/input_marksheet.html',
         'Task Event/event01.html', // JS Assignment
-        'js_calc/Simple Addition.html',
-        'login/js_gates.html',    
+        'js_calc/Simple Addition.html',   
         'Marksheet_JS(onkeyup)/Marksheet.html',        
         'Regex Login/simple_regex_login.html',        
         'scroll/scroll_jq.html',
@@ -185,7 +178,6 @@ document.addEventListener('DOMContentLoaded', function () {
         'Select_Menu/index.html',
         'Simple Scroll/index.html',        
         'Slick Slider/Slider_Assignment.html',
-        'Slider/classwork.html',
         'Task Event/chatbox.html',
         'Task Event/mcq_s.html',
         'Task Event/mcqs_assignment.html',
